# epoch

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  project_resolution.rs
src/collectors/: mod.rs  process.rs  system.rs  training.rs
src/home/: service.rs
src/parsers/: aliases.rs  csv.rs  hf_trainer.rs  jsonl.rs  mod.rs  regex_parser.rs  tensorboard.rs
src/store/: mod.rs  repository.rs  schema.rs  types.rs
src/ui/: advanced.rs  alerts_panel.rs  components.rs  dashboard.rs  events_notes.rs  file_picker.rs  graph.rs  header.rs  help.rs  home.rs  live.rs  metrics.rs  mod.rs  run_detail.rs  run_explorer.rs  settings.rs  system.rs  system_processes.rs  theme.rs
tests/: phase1_discovery.rs  phase1_docs.rs  phase1_events.rs  phase1_launch.rs  phase1_resolution.rs  phase1_store.rs  phase1_ui.rs  smoke.rs
tests/fixtures/: parser_contract_mixed.txt  parser_contract_non_finite.jsonl
