[package]
name = "epoch"
version = "0.2.0"
edition = "2024"
rust-version = "1.86.0"
description = "Terminal-based real-time monitoring dashboard for AI/ML training runs"
license = "MIT"
repository = "https://github.com/grannejanne/epoch"
readme = "README.md"
keywords = ["tui", "machine-learning", "monitoring", "gpu", "training"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.38"
nvml-wrapper = { version = "0.12", optional = true }
notify = "8"
regex = "1"
csv = "1"
ignore = "0.4"
nucleo = "0.5"
nucleo-matcher = "0.3"
strum = { version = "0.26", features = ["derive"] }
directories = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[[bench]]
name = "benchmarks"
harness = false
